# with-robot-2023

./: .gitignore  CameraMotor.ino  MPU6050_light.cpp  MPU6050_light.h  README.md  requirements.txt  turtlesim.yaml
brian/kitti_lidar-cam_calibration/: calibration.py  utils.py
ctrl_ws/: arm_tutorial.ipynb
ctrl_ws/.ipynb_checkpoints/: arm_tutorial-checkpoint.ipynb
esp32/: README.md
esp32/web_server/: Car_Robot_Camera_Web_Server.ino  README.md
esp32cam-robot/: app_httpd.cpp  esp32cam-robot.ino
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
robot/esp32_robot_arduino/: Image_s.h  camera_pins.h  esp32_robot_arduino.ino  stream_io.cpp
robot/robot/: camera_control.cpp  camera_control2.cpp  camera_pins.h  esp32_robot_arduino.ino  user_func.h
robot/robot_main/: camera_tool.cpp  camera_tool.h  control.cpp  control.h  get_image.cpp  get_image.h  http.html  robot_control.cpp  robot_control.h  robot_main.ino
robot/tcp_client/: camera_image.cpp  tcp_client.ino  wheel_control.cpp  wheel_control.h
robot/webcam/: app_httpd.cpp  webcam.ino
robot/websocket/: camera_image.cpp  camera_image.h  index_html.cpp  web_socket.cpp  websocket.h  websocket.ino  websocket2.ino_  websocket3.ino_  wheel_control.cpp  wheel_control.h
ros2/src/client_nodes/: package.xml  setup.cfg  setup.py
ros2/src/client_nodes/client_nodes/: camera_image_sub.py  wheel_control_client.py
ros2/src/client_nodes/launch/: camera.launch.py  full.launch.py  wheel.launch.py
ros_node/img_receive/: package.xml  setup.cfg  setup.py
src/car_tutorial/: setup.py  (+3 more)
(+209 files in other folders)
