<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>client_nodes</name>
  <version>0.0.2</version>
  <description>로봇 카메라 subscribe</description>
  <maintainer email="c4now@naver.com">Michael Kwon</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>sensor_msgs</depend>  
  <depend>inf.srv</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
